Add ocr api integration

--- a/VisionCareCore/VisionCareCore.csproj
+++ b/VisionCareCore/VisionCareCore.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.AI.Vision.ImageAnalysis" Version="1.0.0" />
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="EntityFrameworkCore.CreatedUpdatedDate" Version="8.0.0" />
         <PackageReference Include="Humanizer" Version="2.14.1" />
